--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -2,13 +2,18 @@ footer{
  font-family: sans-serif;
 }
 
-.container-footer {
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+#container-footer {
     display: flex;
     background-color: #444444;
     justify-content: space-between;
     padding: 10px;
     border-bottom:2px solid white ;
-    border-top:3px solid black ;
 }
 
 .aiuto-footer h3 {
