--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -6,18 +6,17 @@
     box-sizing: border-box;
 }
 
-.prova {
+.navbarwrapper {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between !important;
     align-items: center;
     margin-left: 200px;
     margin-right: 100px;
 }
 
-.navbar {
+.navbarComponent {
     background-color: #000000;
     width: 100%;
-    
     border-bottom: 3px solid var(--clr-white);
     border-left: 3px solid var(--clr-white);
     border-right: 3px solid var(--clr-white);
