--- a/src/style/Carosello.css
+++ b/src/style/Carosello.css
@@ -1,7 +1,16 @@
-.caroselloCard{
+.caroselloCard {
     transition: all .2s ease;
 }
 
 .caroselloCard:hover {
     transform: translateY(-10px);
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+    display: none;
+}
+
+.carousel-indicators {
+    bottom: -1rem;
 }
