--- a/src/style/Button.css
+++ b/src/style/Button.css
@@ -1,6 +1,14 @@
+@import url(./root.css);
 
-
-.btns {
-   color: red;
-   margin: 10px;
+.Button {
+   display: flex;
+   font-size: 15px;
+   margin-top: 10px;
+   padding-left: 40px;
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+    outline: none;
+    border: none;
+    background: transparent;
 }
