--- a/src/style/Button.css
+++ b/src/style/Button.css
@@ -3,8 +3,8 @@
 .Button {
    display: flex;
    font-size: 15px;
-   margin-top: 10px;
-   padding-left: 40px;
+   margin-top: 20px;
+   margin-left: 14px;
     color: black;
     text-decoration: none;
     cursor: pointer;
