--- a/src/style/Category.css
+++ b/src/style/Category.css
@@ -5,14 +5,14 @@
   }
   
   .sidebar-items {
-    margin-top: 20px;
+    margin-top: 40px;
   }
   
   .sidebar-label-container {
     display: block;
     position: relative;
     padding-left: 35px;
-    margin-bottom: 12px;
+    margin-bottom: 10px;
     cursor: pointer;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -28,8 +28,8 @@
   
   .checkmark {
     position: absolute;
-    top: 0;
-    left: 0;
+    bottom: 10px;
+    left: 5px;
     height: 20px;
     width: 20px;
     background-color: #eee;
@@ -45,7 +45,7 @@
   }
   
   .sidebar-label-container input:checked ~ .checkmark {
-    background-color: #2196f3;
+    background-color: black;
   }
   
   .checkmark:after {
@@ -71,4 +71,6 @@
     margin-top: 3rem;
     border-color: #f7f7f7;
   }
+
+ 
   
