--- a/src/style/Cart.css
+++ b/src/style/Cart.css
@@ -17,9 +17,9 @@
     gap: 20px;
 }
 .cart-checkout{
-    font-size: large;
+    font-size: 40px;
     position:fixed;
-    right: 20px;
+    right: 50px;
     top: 30%;
     display: flex;
     flex-direction: column;
@@ -64,7 +64,11 @@
     background-color: #45a049; /* Darker Green on hover */
   }
   
-  /* Active/Clicked State */
+  
   .cart-checkout button:active {
     background-color: #3e8746; /* Even Darker Green on click */
+  }
+
+  .delete:hover{
+    fill: red;
   }
