--- a/src/style/Button.css
+++ b/src/style/Button.css
@@ -11,8 +11,12 @@
     outline: none;
     border: none;
     background: transparent;
+    transition: color 0.4s;
+    font-size: 18px;
+    text-transform: capitalize;
 }
 
 .Button:hover {
     color: var(--clr-red)
+
 }
