--- a/src/style/Products.css
+++ b/src/style/Products.css
@@ -11,9 +11,17 @@
     cursor: pointer;
   }
 
-.card:hover{
+.card:hover .card-img{
     transform: scale(1.05);
     transition: 0.6s;
+}
+
+h3{
+  transition: ease-in-out 0.4s;
+}
+
+.card:hover h3{
+  color: goldenrod;
 }
   
   .card-img {
