--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -13,7 +13,7 @@
 
 .navbarwrapper {
     display: flex;
-    justify-content: space-between !important;
+    justify-content: space-between ;
     align-items: center;
     margin-left: 200px;
     margin-right: 100px;
