--- a/src/style/Products.css
+++ b/src/style/Products.css
@@ -1,38 +1,28 @@
 .card-container {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: 20rem;
-    margin-top: 2rem;
-    z-index: -2;
-  }
-  
-  .card {
-    margin: 20px;
-    cursor: pointer;
-  }
-
-.card:hover .card-img{
-    transform: scale(1.05);
-    transition: 0.6s;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin-left: 20rem;
+  margin-bottom: 220px;
 }
 
-h3{
+.card {
+  margin: 20px;
+  cursor: pointer;
+}
+
+.card:hover .card {
+  transform: scale(1.05);
+  transition: 0.6s;
+}
+
+h3 {
   transition: ease-in-out 0.4s;
 }
 
-.card:hover h3{
+.card:hover h3 {
   color: goldenrod;
 }
-  
-  .card-img {
-    width: 330px;
-  }
-  
-  .card-price {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
- 
-  
+
+.card-img {
+  max-width: 100%;
+}
