--- a/src/style/Sidebar.css
+++ b/src/style/Sidebar.css
@@ -1,11 +1,11 @@
 .sidebar {
     width: 15%;
-    position: absolute;
-   height: 0%;
+    height: 0%;
     z-index: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 180px;
   }
   
 
