added empty cart

--- a/src/style/Cart.css
+++ b/src/style/Cart.css
@@ -77,3 +77,9 @@
   .delete:hover{
     fill: red;
   }
+
+  .cart-empty{
+    text-align: center;
+    font-size: 80px;
+    margin-top: 170px;
+  }
